# transpiration

./: CMakeLists.txt  README.md
include/transpiration/IR/ast/: ASTDialect.h  CMakeLists.txt  ast_dialect.h
include/transpiration/ast/: abstract_expression.h  abstract_node.h  abstract_statement.h  abstract_target.h  assignment.h  ast.h  binary_expression.h  block.h  call.h  expression_list.h  for.h  function.h  function_parameter.h  if.h  index_access.h  literal.h  operator_expression.h  return.h  ternary_operator.h  unary_expression.h  variable.h  variable_declaration.h
include/transpiration/ast/parser/: errors.h  file.h  helpers.h  lookup.h  parser.h  push_back_stream.h  tokenizer.h  tokens.h
include/transpiration/ast/utils/: abc_ast_to_mlir_visitor.h  datatype.h  ivisitor.h  node_utils.h  operator.h  parent_setting_visitor.h  plain_visitor.h  print_visitor.h  program_print_visitor.h  scope.h  scoped_visitor.h  variable_map.h  visitor.h
src/IR/ast/: CMakeLists.txt  ast_dialect.cc
src/ast/: abstract_node.cc  assignment.cc  binary_expression.cc  block.cc  call.cc  expression_list.cc  for.cc  function.cc  function_parameter.cc  if.cc  index_access.cc  operator_expression.cc  return.cc  ternary_operator.cc  unary_expression.cc  variable.cc  variable_declaration.cc
src/ast/parser/: errors.cc  file.cc  parser.cc  push_back_stream.cc  tokenizer.cc  tokens.cc
src/ast/utils/: abc_ast_to_mlir_visitor.cc  datatype.cc  node_utils.cc  operator.cc  parent_setting_visitor.cc  plain_visitor.cc  print_visitor.cc  program_print_visitor.cc  scope.cc  scoped_visitor.cc
